Add implementation to remove the existing file